Added midnight essence

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.tutorialmod.midnight_emerald": "Midnight Emerald"
+  "item.tutorialmod.midnight_emerald": "Midnight Emerald",
+  "item.tutorialmod.midnight_essence": "Midnight Essence"
 }
