Added custom tab pls started on blocks

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.tutorialmod.midnight_emerald": "Midnight Emerald",
-  "item.tutorialmod.midnight_essence": "Midnight Essence"
+  "item.tutorialmod.midnight_essence": "Midnight Essence",
+
+  "itemGroup.CUSTOM_TAB": "custom_items"
 }
