Added Gaze Lantern that is supposed changes light level when you right-click it but doesn't and displays a chat message plus block texture not working.

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.tutorialmod.midnight_ore": "Midnight Ore",
   "block.tutorialmod.deepslate_midnight_ore": "Deepslate Midnight Ore",
   "block.tutorialmod.jumpy_speed_block": "Jumpy Speed Block",
+  "block.tutorialmod.gaze_lantern": "Gaze Lantern",
 
   "itemGroup.customitems": "Midnight Items"
 }
